Add user update and delete with validation and tests
Added some new logic for update and delete users to match GDPR expectations.
- Add IUserService, UserService
- Add UpdateUserAsync and DeleteUserAsync to UserService
- Add GetUserByIdAsync and DeleteUserAsync to UserRepo
- Add UserUpdateRequestDto & UserResponseDto
- Add UserUpdateRequestValidator with FluentValidation
- Add UserServiceTests covering update & delete
- Update IUserRepo and AuthenticationService to use async methods
- Update AuthenticationServiceTests to match async repo methods
- Added new exception to the GlobalExceptionHandler
- General cleanup in all unit tests
- Refactored controllers
- Added Postman collection with API tests to docs folder
- Update README
