# server/Application/Models/Dtos/Users/UserUpdateRequestDto.cs
@@ -1,0 +1,8 @@
+namespace Application.Models.Dtos.Users;
+
+public class UserUpdateRequestDto
+{
+    public string Name { get; set; } = string.Empty;
+    public string Email { get; set; }  = string.Empty;
+    public string Password { get; set; }  = string.Empty;
+}
